updated requirements with opencv and updated yolo inference import

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Pillow==6.1.0
-keras==2.2.4
 matplotlib==3.1.1
+Keras==2.2.4
+tensorflow_gpu==1.14.0
 numpy==1.16.4
-tensorflow-gpu==1.14.0
+Pillow==6.1.0
+tensorflow==1.14.0
+opencv-python
